--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,151 @@
-body{
+*{
     margin: 0;
     padding: 0;
+}
+body{
     font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: #000;
+}
+/* Reset content */
+.container{
+    width: 1170px;
+    margin: 0 auto;
+}
+.clearfix{
+    overflow: hidden;
+}
+.bg-banner-h{
+    background: url('../img/top-banner.png') no-repeat;
+}
+.bg-banner-a{
+    background: url('../img/dream-bg.png') no-repeat right;
+}
+.bg-banner-ser{
+    background: url('../img/exp-bg.png') no-repeat left;
+}
+img {
+    max-width: 100%;
+}
+.f-size{
+    font-size: 16px !important;
+}
+.h-500{
+    height: 500px;
+}
+.pt-30{
+    padding-top: 30px;
+}
+.pb-150{
+    padding-bottom: 150px;
+}
+.btn {
+    text-decoration: none;
+    background: linear-gradient(45deg, lightsalmon, tomato);
+    padding: 10px 40px;
+    border-radius: 5px;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    margin-top: 10px;
+}
+/* Header part */
+.main-header,
+.service-content {
+    width: 100%;
+}
+.left-side-h {
+    width: 52%;
+    float: left;
+}
+.right-side-h{
+    width: 40%;
+    float: left;
+    margin-left: 80px;
+}
+.heading-title h1,
+.heading-title h2 {
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 40px;
+}
+.heading-title span{
+    color: #ffa500;
+}
+.content-text .content-title {
+    font-size: 19px;
+    margin-bottom: 20px;
+}
+.content-text .content-para{
+    font-size: 18px;
+    color: #696969;
+}
+.btn-content{
+    transition: linear .5s;
+    -webkit-transition: linear .5s;
+    -moz-transition: linear .5s;
+    -ms-transition: linear .5s;
+    -o-transition: linear .5s;
+}
+.btn-content:hover{
+    color: lightsalmon;
+    background: #fff;
+    border: 1px solid lightsalmon;
+}
+/* About part */
+.about-left {
+    width: 40%;
+}
+.about-right {
+    width: 52%;
+}
+.about-right .heading-title h2{
+    font-size: 46px;
+}
+.service-content div{
+    box-shadow: 5px 7px 40px gray;
+    height: 80%;
+}
+.ser-title {
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+.leftSide-content, .rightSide-content {
+    width: 40%;
+    float: left;
+    margin-left: 50px;
+    padding: 20px 30px;
+    background: #fff;
+}
+.ser-content-h {
+    font-size: 36px;
+    text-transform: capitalize;
+    margin-bottom: 25px;
+}
+.ser-content-subTitle {
+    font-size: 19px;
+    color: #ffa500;
+    margin-bottom: 15px;
+    text-transform: capitalize;
+}
+.ser-content-para {
+    font-size: 16px;
+    color: #696969;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightsalmon, tomato);
+    border-image-slice: 1;
+}
+#baby-stack {
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+}
+footer p {
+    text-align: center;
+    color: #696969;
+    margin-bottom: 15px;
 }
