--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ img {
 }
 .service-content div{
     box-shadow: 5px 7px 40px gray;
-    height: 80%;
+    height: 330px;
 }
 .ser-title {
     font-size: 40px;
